[package]
name = "rass"
version = "0.3.0"
description = "A rust implementation for the standard *nix password manager: pass"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]
repository = "https://github.com/awidegreen/rass"
documentation = "https://awidegreen.github.io/rass/"
license = "ISC"
keywords = ["password", "manager", "passwordstore"]
readme = "README.md"

[lib]
name = "rasslib"
path = "src/lib.rs"

[[bin]]
name = "rass"
path = "src/main.rs"

[dependencies]
gpgme = { git = "https://github.com/johnschug/rust-gpgme", rev = "012cef75" }
#gpgme = "0.4.0"
clap = "*"
rpassword = "0.1"
