[package]
name = "rass"
version = "0.2.1"
description = "A rust implementation for the standard *nix password manager: pass"
authors = ["Armin Widegreen <armin.widegreen@gmail.com>"]
repository = "https://github.com/awidegreen/rass"
documentation = "https://awidegreen.github.io/rass/"
license = "ISC"
keywords = ["password", "manager", "passwordstore"]
readme = "README.md"

[lib]
name = "rasslib"
path = "src/lib.rs"

[[bin]]
name = "rass"
path = "src/main.rs"

[dependencies]
gpgme = "0.6.0"
clap = "2.*"
rpassword = "0.3.*"
tempfile = "2.*"
